--- a/_sass/hydeout/_variables.scss
+++ b/_sass/hydeout/_variables.scss
@@ -41,7 +41,7 @@ $default-box-shadow: $box-shadow-size
                      $box-shadow-size
                      rgba(0, 0, 0, $box-shadow-opacity);
 
-$code-font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace !default;
+$code-font-family: SFMono-Regular, Consolas, "Liberation Mono", Menlo, monospace !default;
 $code-color: #90A0FF !default;
 $code-background-color: #1B1B1B !default;
 
